<resources>
    <string name="app_name">Power Plants</string>
    <string name="back4app_server_url" translatable="false">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id" translatable="false">fLAWXkJdtX3Xk80L9YkqvS3I0nsxqvd5JAqBAYkR</string>
    <string name="back4app_client_key" translatable="false">Kvk6qXtYUoduwyQSFMAnR3Tw99aOHk8WpKKHCPpM</string>
    <string name="user_login">User Login</string>
    <string name="administrator_login">Administrator Login</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">or</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="add_post">Add New Post</string>
    <string name="takePicture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="uploadImage">Upload Image</string>
    <string name="description">Description...</string>
    <string name="save_changes">Save Changes</string>
    <string name="todo">TODO</string>
    <string name="edit_post">Edit Post</string>
    <string name="search_button">Search</string>
    <string name="edit_account">Edit Account</string>

    <string-array name="users">
        <item>user1</item>
        <item>user2</item>
        <item>user3</item>
        <item>user1</item>
    </string-array>
</resources>